complete expenditure apis
